@@ -374,7 +374,19 @@ public class HLog implements HConstants {
           new HLogKey(regionName, tableName, key.getRow(), seqNum[counter++]);
         HLogEdit logEdit =
           new HLogEdit(key.getColumn(), es.getValue(), key.getTimestamp());
-        this.writer.append(logKey, logEdit);
+        try {
+          this.writer.append(logKey, logEdit);
+        } catch (IOException e) { 
+          LOG.error("Could not append to log. Opening new log. Exception: ", e);
+          rollWriter();
+          try {
+          	this.writer.append(logKey, logEdit);
+          } catch (IOException e2) { 
+            LOG.fatal("Could not append to log the second time because " + 
+              e2.toString() + ", aborting.");
+            throw e2;
+          }
+        }
         this.numEntries++;
       }
     }
